--- a/mobile_client/UdpAndroidPOC/AndroidManifest.xml
+++ b/mobile_client/UdpAndroidPOC/AndroidManifest.xml
@@ -4,12 +4,13 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="7" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" 
+        android:debuggable="true" >
         <activity
             android:name=".UdpAndroidPOCActivity"
             android:label="@string/app_name" >
