--- a/mobile_client/UdpAndroidPOC/AndroidManifest.xml
+++ b/mobile_client/UdpAndroidPOC/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk android:minSdkVersion="7" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -14,7 +16,8 @@
         android:debuggable="true" >
         <activity
             android:name=".UdpAndroidPOCActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
